# godot-gaemwurld

libparticleverse/: Cargo.toml  workspace.code-workspace
libparticleverse/src/: lib.rs  librslower.rs  nativetimer.rs  playerinput.rs  spacemagic.rs  tilebg.rs  tilebody.rs  tilefg.rs  tilemagic copy.rs
particleverse/: Node2D.gdns  RootScene.tscn  project.godot
particleverse/gdscripts/: Camera2D.gd  Label.gd  Main.gd
particleverse/lib/windows/: ParticleVerse.d
