[package]
name = "ParticleVerse"
version = "0.1.0"
authors = ["osimmac <cammiso98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
legion = "0.4.0"




[profile.dev]
opt-level = 1
#[profile.dev.package."*"]
#opt-level = 3

[profile.release]
lto = true
opt-level = 3
panic = "abort"